Resolve error declaration found for import interface: change of tsconfig file
